
Moved exempt_all option to unrealircd.conf, no longer
a #define in settings.h & ./Config option.
--Luke
===================================

Made stop code error more stupid-people friendly
--Luke
===================================

Added code that shows nick changes on entire net
when umode +j (JUNK). Also, went through channel.c
and made all snotices look "nicer"
--Luke
===================================

Moved cloak keys to unrealircd.conf, since the
.network files are public domain (in general).
Go lynch Stskeeps if you don't like it.
--Luke
===================================

Actually added sample lines to unrealircd.conf
for EXEMPT_ALL and CLOAK_KEY_n. Also, changed
version number on both that and the .network
file, as both have changed since 3.1.3.
--Luke
===================================

Useful /who patch incorporated, thanks to
larne
--Luke
===================================

Rewrote all of /who, fuck everyone's patches
mine are better!
--Luke
===================================

More /who madness! I've added an h flag, similar
to the o flag that you can append on the end
for opers, so for instance say you /who *bob* h
it will display real hosts instead of masked ones
in the replies.
--Luke
===================================

Oper invisibility is no longer enabled by default
but is a provided option in ./Config
--Luke
===================================

Changed information flag shown in /version. R now
appears if invisibility is compiled in (even if
disabled in unrealircd.conf)
--Luke
===================================

rmed Config.c (broken, severely) and networks.ndx
--Luke
===================================

Added win32-compile-guide in doc/ for people wanting
to compile their own version for windows.
--Luke
===================================

Once again we global when anyone that's not a local
oper opers. I like this, if you don't email me and
maybe I'll add a conf option for it.
--Luke
===================================